--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image" href="/logo.jpg" />
+    <link rel="icon" type="image" href="/logo.png" />
     <!-- Let the UA render either scheme for built-in controls -->
     <meta name="color-scheme" content="dark light" />
     <title>NAZ
